# DOI2PDF

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  DOI2PDF-browser-setup.bat  DOI2PDF.bat  MANIFEST.in  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  PAPER_FETCH_INTEGRATION.md
doi2pdf/: __init__.py  acceptance.py  api_probe.py  batch_journal.py  batch_plan.py  browser_assist.py  capabilities.py  cli.py  config.py  holdings.py  http.py  institution.py  learned_rules.py  library_detect.py  llm_ranker.py  models.py  naming.py  normalize.py  open_access.py  pipeline.py  publisher_routes.py  resolver.py  route_health.py  tdm.py  translator.py  web.py  zotero.py  zotero_attach.py
skills/doi2pdf/: SKILL.md
skills/doi2pdf/agents/: openai.yaml
skills/doi2pdf/references/: configuration.md  publisher-routes.md
skills/doi2pdf/scripts/: install_cli.py
tests/: __init__.py  _pdf.py  test_acceptance.py  test_batch_journal.py  test_batch_plan.py  test_capabilities.py  test_cli.py  test_config.py  test_holdings.py  test_http.py  test_institution.py  test_learned_rules.py  test_library_detect.py  test_llm_ranker.py  test_naming.py  test_normalize.py  test_open_access.py  test_pipeline.py  test_product_contract.py  test_publisher_routes.py  test_resolver.py  test_route_health.py  test_tdm.py  test_translator.py  test_web.py  test_zotero_attach.py
