[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doi2pdf"
version = "0.8.3"
description = "Lawful DOI-to-PDF retrieval through OA, publisher TDM, institutional access, and library resolvers"
readme = "README.md"
license = "AGPL-3.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["zotero", "pdf", "research", "downloader", "academic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "python-dotenv>=1.0.0",
    "requests>=2.34.2",
    "beautifulsoup4>=4.12.0",
    "defusedxml>=0.7.1",
    "pypdf>=6.13.3,<7",
]

[project.optional-dependencies]
browser = [
    "playwright>=1.61.0",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
]
dev = [
    "playwright>=1.61.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "build>=1.2.0",
    "pytest>=8.0",
    "pyyaml>=6.0",
    "ruff>=0.15.21",
    "twine>=6.2.0",
    "pip-audit>=2.10.1",
]

[project.scripts]
doi2pdf = "doi2pdf.cli:main"
doi2pdf-web = "doi2pdf.web:main"

[project.urls]
Homepage = "https://github.com/erichuang777777/DOI2PDF"
Issues = "https://github.com/erichuang777777/DOI2PDF/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["doi2pdf*"]
exclude = ["downloads*", "tests*"]
